bugfix: fixed es 7 not covering whole screen

--- a/esercizio-7/start.css
+++ b/esercizio-7/start.css
@@ -1,19 +1,21 @@
-body {
+#father {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(4, 1fr);
+	grid-template-rows: repeat(4, 25%);
 	grid-template-areas:
 		"verde verde verde"
 		"giallo rosso blu"
 		"giallo rosso blu"
 		"arancio arancio blu";
-	height: 100vh;
 	width: 100%;
+	height: 100vh;
 }
 
 #yellow {
 	grid-area: giallo;
 	margin-left: 0px;
+	display: flex;
+	flex-direction: column;
 }
 
 #yellow ul {
@@ -21,13 +23,14 @@ body {
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(2, 1fr);
 	width: 100%;
-	justify-content: space-between;
+	height: 100%;
 	height: auto;
+	gap: 3rem;
 }
 
 #yellow ul li {
 	width: 50%;
-	height: auto;
+	height: 50%;
 }
 
 #blue {
@@ -44,6 +47,9 @@ body {
 
 #red {
 	grid-area: rosso;
+	margin-left: 0px;
+	display: flex;
+	flex-direction: column;
 }
 
 #red ul {
@@ -51,13 +57,14 @@ body {
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(2, 1fr);
 	width: 100%;
-	justify-content: space-between;
+	height: 100%;
 	height: auto;
+	gap: 3rem;
 }
 
 #red ul li {
 	width: 50%;
-	height: auto;
+	height: 50%;
 }
 
 #green {
